k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floaty
  namespace: apps
  labels:
    app: floaty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: floaty
  template:
    metadata:
      labels:
        app: floaty
    spec:
      nodeSelector:
        volume-node: rpf
      securityContext:
        fsGroup: 0
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: floaty
          image: floaty
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: floaty
          resources:
            limits:
              memory: 64Mi
            requests:
              memory: 32Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: apps-data
---
apiVersion: v1
kind: Service
metadata:
  name: floaty
  namespace: apps
spec:
  selector:
    app: floaty
  ports:
    - port: 80
      targetPort: 8080
